--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,7 @@ default: &default
 development:
   <<: *default
   database: simple_cms_development
+  # port: 33060
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
